<resources>
    <string name="app_name">HALPP!</string>
    <string name="image_content">image</string>
    <string name="ok">OK</string>
    <string name="cancel">Annuleer</string>
    <string name="everybody">Iedereen</string>
    <string name="groups">GROEPEN</string>
    <string name="skip">Niet nu</string>
    <string name="read_more">Lees meer</string>
    <string name="read_less">Lees minder</string>

    // LOGIN SCREEN
    <string name="login_title">HALPP!</string>
    <string name="login_subtitle">Wat moet ik kiezen?</string>
    <string name="login_text">Inloggen</string>
    <string name="logout_text">Uitloggen</string>
    <string name="login_email_text">email</string>
    <string name="login_password_text">wachtwoord</string>
    <string name="facebook_app_id">1276846372390346</string>
    <string name="fb_login_protocol_scheme">fb1276846372390346</string>

    // DILEMMA PAGE
    <string name="de_kies">DE KIES</string>
    <string name="dilemma_main_text">Mijn familie wil mijn vader cremeren maar ik wil</string>
    <string name="dilemma_main_text_short_version">Oh wat een dilemma. Wat moet ik kiezen?</string>
    <string name="dilemma_username">ANONIEM</string>
    <string name="dilemma_user_description">Vrouw | 31 jaar</string>
    <string name="dilemma_filter">Alleen vrienden</string>
    <string name="dilemma_empty">Whoops, je bent door alle dilemma\'s heen!</string>
    <string name="dilemma_x_uur">xx uur</string>
    <string name="choose_dilemma">KIES\n%1$s</string>
    <string name="add_content_swipe">Licht jouw\nantwoord toe +</string>
    <string name="create_dilemma_yourself">Wil je zelf een dilemma maken?</string>

    // PERSONAL PAGE
    <string name="button_expired">Gesloten</string>
    <string name="button_running">Lopend</string>
    <string name="button_my_dilemmas">Mijn dilemma\'s</string>
    <string name="button_from_others">Van anderen</string>
    <string name="anonymous">Anoniem</string>
    <string name="time_left_1_hour">1 uur</string>

    // TARGET GROUP SCREEN
    <string name="targetgroup_title">VRAAG HET AAN</string>
    <string name="targetgroup_friends">VRIENDEN</string>
    <string name="targetgroup_everyone">IEDEREEN</string>
    <string name="targetgroup_profile">Profile</string>
    <string name="button_next">VOLGENDE STAP!</string>
    <string name="create_dilemma">Nieuw dilemma</string>
    <string name="targetgroup_call_someone">JE MOEDER BELLEN</string>
    <string name="targetgroup_call_someone_2">DARTH VADER BELLEN</string>
    <string name="targetgroup_call_someone_3">DE FABELTJESKRANT BELLEN</string>
    <string name="targetgroup_call_someone_4">ALFRED JODOCUS KWAK BELLEN</string>
    <string name="targetgroup_call_someone_5">BNN BELLEN</string>
    <string name="targetgroup_call_someone_6">SHANIQUA BELLEN</string>
    <string name="targetgroup_call_someone_7">HELP DESK BELLEN</string>
    <string name="targetgroup_call_someone_8">BASSIE EN ADRIAAN BELLEN</string>
    <string name="targetgroup_call_someone_9">HELP LINE BELLEN</string>
    <string name="targetgroup_call_someone_10">JIP EN JANNEKE BELLEN</string>
    <string name="targetgroup_call_someone_11">WILLEM HOLLEEDER BELLEN</string>
    <string name="targetgroup_call_someone_12">ALBERT VERLINDE BELLEN</string>
    <string name="targetgroup_call_someone_13">PATTY BRARD BELLEN</string>

    // DILEMMA FROM WHO SCREEN
    <string name="dilemma_from_who_title">HOE VRAGEN?</string>
    <string name="dilemma_from_who_anonymous">ANONIEMPJE_69</string>
    <string name="dilemma_from_who_myself">ALS MEZELF</string>

    // DEADLINE WHO SCREEN
    <string name="deadline_title"> UUR TOT DE UITSLAG</string>
    <string name="deadline_set">PLAATS!</string>
    <string name="deadline_hours_1">2 uur</string>
    <string name="deadline_hours_2">12 uur</string>
    <string name="deadline_hours_3">24 uur</string>
    <string name="share_on_social_media">Deel op social media</string>
    <string name="share_on_social_media_text">Wil je jouw dilemma delen op Social Media?</string>
    <string name="go_to_main">Ga naar dilemmas</string>
    <string name="share">Delen</string>
    <string name="dilemma_is_posted">Je dilemma is nu te zien voor anderen!</string>

    // CREATE DILEMMA SCREEN
    <string name="title_hint">Moet ik…</string>
    <string name="title_hint_1">Dilemma 1</string>
    <string name="title_hint_2">Dilemma 2</string>
    <string name="image_title">image title</string>
    <string name="not_all_fields_filled">Vul eerst alle velden in voor je verder gaat!</string>
    <string name="check_at_least_one_friend">Vink ten minste éen van je vrienden aan!</string>
    <string name="check_at_least_one_targetgroup">Kies eerst je doelgroep!</string>
    <string name="check_at_least_one_sender">Kies eerst of je anoniem wilt blijven of niet!</string>
    <string name="check_at_least_one_deadline">Je moet de looptijd nog kiezen!</string>
    <string name="use_image">Gebruik foto</string>
    <string name="enter_dilemma_context">Leg hier uit waarom jij op deze optie stemt</string>
    <string name="save_context">OPSLAAN</string>
    <string name="add_content">Licht jouw antwoord toe +</string>
    <string name="add_photo">Voeg foto toe</string>
    <string name="take_photo">Maak Foto</string>
    <string name="photo_gallery">Fotogalerij</string>
    <string name="google_search">Google Search</string>
    <string name="SureToCancel">Weet je zeker dat je terug wilt? De ingevulde gegevens worden dan niet opgeslagen.</string>

    // GOOGLE SEARCH SCREEN
    <string name="google_cx_key">005303562240230618745:fehybwiv3j0</string>
    <string name="google_search_api_key">AIzaSyDNtEcEBu5G3341BkSjJqoOeUqID9MLNp4</string>
    <string name="google_baseURL">https://www.googleapis.com</string>
    <string name="google_no_photos">We hebben geen foto\'s gevonden voor je zoekopdracht, probeer het opnieuw</string>

    // ADD CONTENT SCREEN
    <string name="add_content_hint">Waar denk je aan?</string>
    <string name="add_content_media">Voeg media toe</string>
    <string name="result_page_content_buttons">Toelichtingen</string>
    <string name="add_content_foto_video">Foto</string>
    <string name="add_content_google">Google Verrassing</string>
    <string name="add_content_add">VOEG TOE</string>
    <string name="add_content_article">artikel / blog / fragment</string>
    <string name="add_content_purpose_title">Waarom raad jij deze keuze aan?</string>
    <string name="add_content_purpose_text">Deel hier waarom jij een bepaalde keuze maakt en voeg een eigen foto of video toe.\n\nOf nog makkelijker: Selecteer meteen via Google een foto!\n\nWil je een tof artikel, blog of fragment vinden, die jouw keuze nog meer onderbouwt? Dat kan hier!</string>

    // RESULT SCREEN
    <string name="result_content">TOELICHTING</string>
    <string name="expired_dilemma">Verlopen</string>

    // GROUP PAGE
    <string name="group_page_title">Groepen Beheren</string>
    <string name="group_page_save_group">Bewaar Groep</string>
    <string name="group_page_your_groups">JOUW GROEPEN</string>
    <string name="group_page_new_groups">MAAK GROEP</string>
    <string name="fill_in_group_name">Voer groepsnaam in</string>
    <string name="tap_to_see_group_members">Klik om groepsleden te zien</string>
    <string name="delete_groups">Groepen verwijderen</string>

    // DUMMY/HINT VARIABLES
    <string name="name">NAAM</string>
    <string name="optionA">OptionA</string>
    <string name="optionB">OptionB</string>
    <string name="name_info">Man, 24, Amsterdam</string>
    <string name="dummy_text">I LOVE IT HERE!</string>


</resources>
