<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_gravity="center"
              android:background="@color/colorGrey">

    <ImageView
        android:id="@+id/imageview_fromwho_user"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:background="@mipmap/ic_profile"
        android:backgroundTint="@color/colorYellow"
        android:layout_marginTop="18dp"
        android:contentDescription="@string/image_content"/>

    <TextView
        android:id="@+id/textview_fromwho_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dilemma_from_who_title"
        android:textAlignment="center"
        android:textSize="18sp"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="80dp"
        android:layout_marginTop="10dp"
        android:padding="8dp"
        android:textColor="@color/colorGreen"
        android:background="@color/colorYellow"/>


    <Button
        android:id="@+id/button_fromwho_anonymous"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dilemma_from_who_anonymous"
        android:textAlignment="center"
        android:textSize="20sp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="60dp"
        android:padding="15dp"
        android:textColor="@color/colorYellow"
        android:background="@color/colorGreen"/>

    <Button
        android:id="@+id/button_fromwho_myself"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dilemma_from_who_myself"
        android:textAlignment="center"
        android:textSize="20sp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="20dp"
        android:padding="15dp"
        android:textColor="@color/colorYellow"
        android:background="@color/colorGreen"/>

</LinearLayout>