<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGrey"
    >

    <LinearLayout
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="25dp"
        >

        <Button
            android:id="@+id/button_previous_deadline"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/ic_action_previous_arrow"
            />

        <TextView
            android:id="@+id/textview_post_dilemma"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="POST"
            android:textSize="20sp"
            android:gravity="center"
            android:textColor="@color/colorRed"/>

        <!--<Button-->
        <!--android:id="@+id/button_next_deadline"-->
        <!--android:layout_width="30dp"-->
        <!--android:layout_height="30dp"-->
        <!--android:layout_marginLeft="16dp"-->
        <!--android:background="@drawable/ic_action_next_arrow"-->
        <!--/>-->

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <ImageView
            android:id="@+id/imageview_targetgroup_user"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="18dp"
            android:background="@mipmap/ic_profile"
            android:backgroundTint="@color/colorYellow"
            android:contentDescription="@string/image_content"/>

        <TextView
            android:id="@+id/textview_deadline_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80dp"
            android:layout_marginRight="80dp"
            android:layout_marginTop="10dp"
            android:background="@color/colorYellow"
            android:padding="8dp"
            android:text="@string/deadline_title"
            android:textAlignment="center"
            android:textColor="@color/colorGreen"
            android:textSize="18sp"/>


        <Button
            android:id="@+id/button_deadline_hours_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="60dp"
            android:background="@color/colorGreen"
            android:padding="15dp"
            android:text="@string/deadline_hours_1"
            android:textAlignment="center"
            android:textColor="@color/colorYellow"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/button_deadline_hours_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="20dp"
            android:background="@color/colorGreen"
            android:padding="15dp"
            android:text="@string/deadline_hours_2"
            android:textAlignment="center"
            android:textColor="@color/colorYellow"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/button_deadline_hours_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="20dp"
            android:background="@color/colorGreen"
            android:padding="15dp"
            android:text="@string/deadline_hours_3"
            android:textAlignment="center"
            android:textColor="@color/colorYellow"
            android:textSize="20sp"/>


    </LinearLayout>

</RelativeLayout>